# coal

src/coal_communication/: CMakeLists.txt  package.xml
src/coal_communication/src/: coal_udp_pub.cpp  coal_udp_sub.cpp  udp_test.cpp
src/coal_communication/yaml/: coal_com.yaml
src/coal_demo/: CMakeLists.txt  package.xml
src/coal_demo/glogs/: glogs20221102-222553.274484  glogs20221102-223150.280121
src/coal_demo/include/: coal.h
src/coal_demo/launch/: car_livox.launch  coal.launch  livox_simulation.launch  pcl_2_pcl2.launch  world.launch
src/coal_demo/rviz/: car_livox.rviz  car_livox1.rviz
src/coal_demo/src/: coal_demo01.cpp  coal_demo02.cpp  coal_demo03.cpp  getMaxMinRange.cpp  get_pcd.cpp  glog_test.cpp  json2txt.cpp  pcd2bin.cpp  pcl_2_pcl2.cpp  rename.cpp  retxt.cpp  test_laser.cpp  watch_bin.cpp
src/coal_demo/urdf/: car.urdf.xacro  car_avia.xacro  demo05_car_base.urdf.xacro  demo06_my_camera.urdf.xacro  demo07_my_laser.urdf.xacro  livox_avia.xacro  my_imu.xacro  standardrobots_oasis300.xacro
src/coal_demo/urdf/gazebo/: camera.xacro  laser.xacro  move.xacro
src/coal_demo/worlds/: 111.world  222.world  all.world  multi_tunnel.world  wall1.world
src/coal_demo/yaml/: coal.yaml
src/coal_keyboard/: CMakeLists.txt  package.xml
src/coal_keyboard/src/: coal_keyboard.cpp
src/coal_location/: CMakeLists.txt  package.xml
src/coal_msgs/: CMakeLists.txt  package.xml
src/coal_msgs/msg/: chassisControl.msg  keyboard2udp.msg  sensorDataReception.msg
src/coal_uart/: CMakeLists.txt  package.xml
src/coal_uart/Jason/: param.json
src/coal_uart/include/: coal_uart.h  crc.h  fontColor.h
src/coal_uart/include/launch/: pub.launch  sub.launch
src/coal_uart/launch/: keyboard.launch
src/coal_uart/src/: coal_uart.cpp  crc.cpp  uart_node.cpp
src/dump_extract/: CMakeLists.txt  package.xml
src/dump_extract/launch/: extract.launch
src/dump_extract/src/: extract_node.cpp  extract_node.h
